# openenv-proj

./: .gitignore  requirements.txt
hackathon/data_cleaning_env/: __init__.py  client.py  inference.py  models.py  pyproject.toml
hackathon/data_cleaning_env/server/: Dockerfile  __init__.py  app.py  data_cleaning_environment.py  graders.py
hackathon/data_cleaning_env/server/tasks/: __init__.py  base.py  easy.py  hard.py  medium.py
hackathon/data_cleaning_env/server/tasks/data/: easy_expected.json  easy_input.json  hard_expected.json  hard_source_a.json  hard_source_b.json  hard_source_c.json  hard_spec.json  medium_expected.json  medium_input.json  medium_reference.json  medium_rules.json
hackathon/data_cleaning_env/tests/: test_graders.py  test_task_scores.py
hackathon/docs/: PS.md  WINNING-PLAN.md
hackathon/docs/comparison/: COMPARISON.md  PLAN.md  analysis-comparison.md  openenv-hackathon-approach.md
hackathon/docs/sessions/: 01-session-kickoff-and-scaffold.md  02-session-tasks-and-data.md  03-session-graders-and-scoring-tests.md  04-session-environment-loop-and-reward.md  05-session-inference-baseline.md  06-session-docker-and-local-validation.md  07-session-deploy-and-submission.md
hackathon/docs/sessions-plan/: README.md  prompts.md  session-01-tactical-plan.md  session-02-tactical-plan.md  session-03-tactical-plan.md  session-04-tactical-plan.md  session-05-tactical-plan.md  session-06-tactical-plan.md
